force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <description>ECMv1 Job Placement Service Domain</description>
    <label>Interview</label>
    <nameField>
        <displayFormat>Interview-{0000}</displayFormat>
        <label>Interview #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>